--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,8 @@
 [[redirects]]
+  from = "/api"
+  to = "https://itch.io/api"
+  status = 200
+[[redirects]]
   from = "/*"
   to = "/"
   status = 200
