--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [[redirects]]
-  from = "/api"
-  to = "https://itch.io/api"
+  from = "/api/*"
+  to = "https://itch.io/api/:splat"
   status = 200
 [[redirects]]
   from = "/*"
